Update 'y542d0m8p-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1e3e535f55.17at.p3.openshiftapps.com/rhtap/rhtap-qe:7245c9771cb5cdbbaedeb820b4b8c00a00c1b12b@sha256:b9ccfb1572f91d3da892a18706656de38f27cd2c19b17a782d33cf778a6a6d16

--- a/components/y542d0m8p-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/y542d0m8p-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: y542d0m8p-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1e3e535f55.17at.p3.openshiftapps.com/rhtap/rhtap-qe:7245c9771cb5cdbbaedeb820b4b8c00a00c1b12b@sha256:b9ccfb1572f91d3da892a18706656de38f27cd2c19b17a782d33cf778a6a6d16
+          name: container-image
